Fixed bug #36205 (Memory leaks on duplicate cookies)