main/php_variables.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_variables.c,v 1.104.2.4 2006/01/01 12:50:17 sniper Exp $ */
+/* $Id: php_variables.c,v 1.104.2.5 2006/02/13 12:18:16 dmitry Exp $ */
 
 #include <stdio.h>
 #include "php.h"
@@ -207,6 +207,7 @@ plain_var:
 					if (index != escaped_index) {
 						efree(escaped_index);
 					}
+					zval_ptr_dtor(&gpc_element);
 					break;
 				}
 				zend_symtable_update(symtable1, escaped_index, index_len + 1, &gpc_element, sizeof(zval *), (void **) &gpc_element_p);
